fix truncate text align

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -254,7 +254,6 @@
   line-clamp: 3;
   -webkit-box-orient: vertical;
   white-space: normal;
-  text-align: justify;
 }
 
 .blog .truncate{
